# capaldi

./: .env  .gitignore  Cargo.toml  Justfile  README.md  Rocket.toml  capaldi.toml
db/: seed.sql
frontend/: .swcrc  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  svelte.config.js  tsconfig.json
frontend/public/: index.html
frontend/src/: App.svelte  global.d.ts  main.ts  util.ts
frontend/src/api/: aggregates.ts  allocations.ts  components.ts  groups.ts  projects.ts  session.ts  teams.ts
frontend/src/components/: Allocation.svelte  AllocationModal.svelte  AutoComplete.svelte  Pagination.svelte  ResourceModal.svelte
frontend/src/components/charts/: ProjectAllocationChart.svelte
frontend/src/routes/: Groups.svelte  Projects.svelte  Reports.svelte  Teams.svelte
migrations/: 20211014064653_init_schema.down.sql  20211014064653_init_schema.up.sql
src/: auth.rs  main.rs  util.rs
src/models/: aggregate.rs  allocation.rs  component.rs  group.rs  mod.rs  project.rs  resource.rs  team.rs  user.rs
src/routes/: aggregates.rs  allocations.rs  components.rs  groups.rs  mod.rs  projects.rs  resources.rs  session.rs  teams.rs
