[package]
name = "capaldi"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "*"
serde = "*"
serde_json = "*"
futures = "*"
itertools = "0.10"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.rocket]
features = ["json", "secrets"]
version = "0.5.0-rc.1"
git = "https://github.com/SergioBenitez/Rocket.git"

[dependencies.rocket_db_pools]
version = "0.1.0-rc"
git = "https://github.com/SergioBenitez/Rocket.git"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.5.9"
features = ["sqlite", "chrono"]
